[package]
name = "leet_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "eliminate_max"
harness = false

[[bench]]
name = "sort_vowes"
harness = false

[[bench]]
name = "three_palindrome"
harness = false
